--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,21 @@
       content="Used as a boilerplate for tasks in the 'HTML, CSS and SASS' course in boom.dev"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <style>
+      .active{
+        transform: scale(2);
+      }
+    </style>
   </head>
+  
   <body>
+    <div class="container">
+      <img class="image" src="./images/favicon.ico" alt="">
+    </div>
+    
+ 
+
     <div class="main">
       <div class="emoji mb-6">💣🤯💥</div>
       <button class="button">Boom?</button>
